fixed image growing and added left align labels. Fixes #30 and fixes #86
git-svn-id: http://subversion.assembla.com/svn/SIM_WIN/trunk@84 e0e46c49-be69-4f5a-ad62-21024a331aea

--- a/extension/chrome/skin/bindings.css
+++ b/extension/chrome/skin/bindings.css
@@ -35,3 +35,10 @@ slide{
     -moz-binding: url('chrome://maavis/content/bindings/slideshow.xml#slide');
 }
 
+touchkey label.lefty {text-align:left;}
+
+/*Useful for debugging layout issues*/
+/*
+touchkey vbox ,togglekey vbox { border: solid black 2px;}
+touchkey label,togglekey label { border: solid red 2px; }
+*/
